showing proper error codes for /getAllPreviousMessages endpoint